# enum_stringify

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: attributes.rs  case.rs  lib.rs
tests/: all.rs  attributes.rs  basic.rs  battery.rs  case.rs  compatibility.rs  rename.rs
