[package]
name = "enum_stringify"
version = "0.2.0"
edition = "2021"
description="Macro to generate string conversion functions for enums"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Yag000/enum_stringify"
repository = "https://github.com/Yag000/enum_stringify"
documentation = "https://docs.rs/enum_stringify"
keywords = ["enum", "string", "derive", "macro"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.68"
quote = "1.0.33"
syn = "2.0.32"

[dev-dependencies]
serde = { version = "1.0.130", features = ["derive"] }

